frontend and backend modified, rule engine and data models Ui update
